[gd_scene load_steps=3 format=3 uid="uid://cog1sd4ug5dqm"]

[ext_resource type="MeshLibrary" uid="uid://dsx4iyrb0cfvl" path="res://Resources/Testing.tres" id="1_gj1oh"]
[ext_resource type="Script" path="res://Scenes/LogicLevel/LogicLevel.gd" id="1_jk21b"]

[node name="LogicLevel" type="Node3D"]
script = ExtResource("1_jk21b")

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource("1_gj1oh")
cell_size = Vector3(1, 1, 1)
data = {
"cells": PackedInt32Array(-65535, 65535, 1376259, -65535, 0, 1376259, -65536, 0, 1376259, -1, 0, 1376259, -2, 65535, 1376259, -2, 0, 1376259, -2, 1, 1376259, -1, 1, 1376259, -65536, 1, 1376259, -65535, 1, 1376259, -65535, 65534, 1376259, -1, 65534, 1376259, -2, 65534, 1376259, -65536, 65534, 1376259, -1, 65535, 1376259, -65536, 65535, 1376259, -2, 65533, 3, -1, 65533, 3, -65536, 65533, 3, -65535, 65533, 1376259, -65535, 65532, 1376259, -65536, 65532, 1376259, -1, 65532, 1376259, -2, 65532, 1376259, -2, 65531, 1376259, -1, 65531, 1376259, -65535, 65531, 1376259, -65536, 65531, 1376259, 1, 65531, 1376256, 0, 65531, 1376256, 65535, 65531, 1376256, 65534, 65531, 1376256, 65537, 65531, 1376256, 65536, 65531, 1376256, 131071, 65531, 1376256, 131070, 65531, 1376256, 1, 2, 393220, 0, 2, 393220, 65535, 2, 393220, 65534, 2, 393220, 65537, 2, 393220, 65536, 2, 393220, 131071, 2, 393220, 131070, 2, 393220, 9, 65525, 3, -3, 65532, 3, -6, 1, 3, -3, 1, 3, -3, 0, 3, -3, 65535, 3, -3, 65534, 3, -3, 65533, 3, -4, 65532, 3, -5, 65532, 3, -6, 65532, 3, -6, 65533, 3, -6, 65534, 3, -6, 65535, 3, -6, 0, 3, -5, 1, 3, -4, 1, 3, -4, 0, 3, -5, 0, 3, -5, 65535, 3, -4, 65535, 3, -4, 65534, 3, -5, 65534, 3, -5, 65533, 3, -4, 65533, 3, 65533, 65531, 0, 65532, 65531, 0, 65531, 65531, 0, 65530, 65531, 0, 131069, 65531, 0, 131068, 65531, 0, 131067, 65531, 0, 131066, 65531, 0, 131069, 2, 4, 131068, 2, 4, 131067, 2, 4, 131066, 2, 4, 65533, 2, 4, 65532, 2, 4, 65531, 2, 4, 65530, 2, 4, -65534, 1, 3, -65534, 0, 3, -65534, 65535, 3, -65534, 65534, 3, -65534, 65533, 3, -65534, 65532, 3, -65533, 1, 3, -65533, 0, 3, -65533, 65532, 3, -65533, 65533, 3, -65533, 65534, 3, -65533, 65535, 3, -7, 1, 3, -8, 1, 3, -8, 0, 3, -8, 65535, 3, -8, 65534, 3, -7, 65534, 3, -7, 65533, 3, -7, 65532, 3, -8, 65532, 3, -8, 65533, 3, -7, 65535, 3, -7, 0, 3, 2, 65531, 0, 3, 65531, 0, 65538, 65531, 0, 65539, 65531, 0, 65538, 2, 4, 65539, 2, 4, 3, 2, 4, 2, 2, 4, 65529, 2, 4, 65528, 2, 4, 131065, 2, 4, 131064, 2, 4, 131065, 65531, 0, 131064, 65531, 0, 65529, 65531, 0, 65528, 65531, 0)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Input1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.37369, 1, 2)

[node name="Input2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.40291, 1, 2)

[node name="Input3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, 2)

[node name="Input4" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.275, 1, 2)

[node name="Input5" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.475, 1, 2)

[node name="Output1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -3.95)

[node name="Output2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.60453, 1, -3.95)

[node name="Output3" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.787047, 1, -3.95)

[node name="Output4" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.75094, 1, -3.95)

[node name="Output5" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.20793, 1, -3.95)
